--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "migrate-mongo": "^10.0.0",
     "mongoose": "^7.4.1",
-    "multer": "^1.4.5-lts.1",
-    "translation-google": "^0.2.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
