--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dk",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -10,13 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vitalets/google-translate-api": "^9.2.0",
+    "translation-google": "^0.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "migrate-mongo": "^10.0.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1"
   },
