--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
   },
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node app.js" ,
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
